# gcopterRmaderIntegration

./: .gitignore  README.md  functionmapping.xlsx  install_and_compile.sh
benchmarking/: GcopterFormatter.py  RmaderFormatter.py  eda_gcoptersample.ipynb  gcopter_rmader_cpu.ipynb  gcopter_rmader_numIntervals.ipynb
benchmarkingLogs/cpulogs/gcoptercpulogs/: gcopter_16_100.txt  gcopter_16_40.txt  gcopter_16_5.txt  gcopter_16_60.txt  gcopter_16_70.txt  gcopter_16_80.txt  gcopter_16_90.txt
benchmarkingLogs/cpulogs/rmadercpulogs/: rmader_0.01_100_0.1.txt  rmader_0.01_40_0.1.txt  rmader_0.01_5_0.1.txt  rmader_0.01_60_0.1.txt  rmader_0.01_70_0.1.txt  rmader_0.01_80_0.1.txt  rmader_0.01_90_0.1.txt
benchmarkingLogs/gcopterlog/: gcopter_100.txt  gcopter_1000.txt  gcopter_1100.txt  gcopter_1200.txt  gcopter_1300.txt  gcopter_1400.txt  gcopter_150.txt  gcopter_1500.txt  gcopter_16.txt  gcopter_20.txt  gcopter_200.txt  gcopter_300.txt  gcopter_40.txt  gcopter_400.txt  gcopter_5.txt  gcopter_500.txt  gcopter_600.txt  gcopter_700.txt  gcopter_80.txt  gcopter_800.txt  gcopter_900.txt
benchmarkingLogs/rmaderlog/: rmader_1000_0.12.txt  rmader_100_0.1.txt  rmader_1100_0.12.txt  rmader_1200_0.12.txt  rmader_1300_0.12.txt  rmader_1400_0.12.txt  rmader_1500_0.12.txt  rmader_150_0.1.txt  rmader_16_0.08.txt  rmader_200_0.1.txt  rmader_20_0.08.txt  rmader_300_0.1.txt  rmader_400_0.1.txt  rmader_40_0.09.txt  rmader_500_0.1.txt  rmader_5_0.075.txt  rmader_600_0.12.txt  rmader_700_0.12.txt  rmader_800_0.12.txt  rmader_80_0.09.txt  rmader_900_0.12.txt
gcopter/: CMakeLists.txt  package.xml
gcopter/config/: global_planning.rviz  octopus_search.rviz  single_obstacle_gcopter.rviz  test_nlopt.rviz
gcopter/include/: rmader_types.hpp  solver_gcopter.hpp  solver_nlopt.hpp  solver_params.hpp  utils.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: global_planning.launch  multi_obstacle_gcopter.launch  nlopt_refresh.launch  single_obstacle.launch  single_obstacle_gcopter.launch  test_nlopt.launch
gcopter/src/: bspline_utils.cpp  global_planning.cpp  octopus_search.cpp  printer.cpp  single_obstacle.cpp  solver_gcopter.cpp  solver_nlopt.cpp  test_nlopt.cpp  utils.cpp
map_gen/mockamap/src/: maps.cpp
submodules/behavior_selector/: CMakeLists.txt  obs_plugin.xml  package.xml
submodules/behavior_selector/cfg/: default.perspective
submodules/behavior_selector/resource/: ObsMissionModePlugin.ui
submodules/behavior_selector/scripts/: behavior_selector_node.py  rqt_pkg.py
submodules/behavior_selector/src/rqt_pkg/: button_module.py
